--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "author": "ep",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongojs": "^2.4.0"
+    "mongodb": "^2.1.6"
   }
 }
